# Mash

./: .gitmodules  CMakeLists.txt  Makefile.in
cmake/: CapnProtoMacros.cmake
src/mash/: CommandDistance.cpp  CommandDistance.h  CommandIndex.cpp  CommandIndex.h  CommandScreen.cpp  CommandTriangle.cpp  CommandTriangle.h  mash.cpp
test/ref/: reads.json
